# command-zone-you-rock

./: .gitignore  LICENSE  README.md  YOU_ROCK.md  config.toml  pyproject.toml
.github/workflows/: tests.yml  update.yml
.rapidocr-backup-20260628-163101/: README.md  pyproject.toml
.rapidocr-backup-20260628-163101/.github/workflows/: update.yml
.rapidocr-backup-20260628-163101/src/yourock/: capture.py  cli.py  detection.py
.rapidocr-backup-20260628-163101/tests/: test_detection.py
data/: shoutouts-before-name-audit-20260701-204839.csv  shoutouts.csv  videos.csv
src/command_zone_you_rock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yourock/: __init__.py  bookmark_scan.py  browser_capture.py  browser_transcripts.py  capture.py  cli.py  config.py  detection.py  markdown.py  review.py  scanner.py  storage.py  transcripts.py  utils.py  youtube.py
tests/: test_all_chapter_selection.py  test_banner_false_positive.py  test_bookmark_sequence.py  test_bookmarks.py  test_channel_episode_filter.py  test_detection.py  test_early_sweep.py  test_markdown.py  test_patreon_optional.py  test_refinement_timeout_fallback.py  test_review.py  test_utils.py  test_video_timeout.py
